# Eurobot-2025-Vision

./: .gitignore  README.md
.devcontainer/Aruco/: devcontainer.json
.devcontainer/Pytorch-Training/: devcontainer.json
.devcontainer/Realsense/: devcontainer.json
.devcontainer/Ultralytics-ROS/: devcontainer.json
.devcontainer/Ultralytics-Training/: devcontainer.json
dds-uri/: cycloneDDS.xml
docker/: .env  Dockerfile  build.sh  compose.base.yml  compose.module.yml  compose.prod.yml  docker-compose.yaml  dockerfile
docker-base/: Dockerfile  compose.yml
docker-base/scripts/: opencv_install.sh  opencv_version.sh
docker-gpu/: .env  Dockerfile  compose.module.yml
train/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
train/dataset/labels/: train.cache  valid.cache
train/dataset_platform/: data.yaml
train/dataset_platform/train/: labels.cache
train/dataset_platform/valid/: labels.cache
ws/aruco-pkg/aruco_ros/: CMakeLists.txt
ws/aruco-pkg/tools/: aruco2hex.py
ws/aruco-pkg/yolo_pkg/: package.xml  setup.py
ws/camera-pkg/: package.xml  setup.cfg  setup.py
ws/camera-pkg/camera_merger/: oc_multi_camera_merged.py
ws/camera-pkg/camera_snap/: sp_camera.py  sp_multi_camera.py
ws/camera-pkg/image_stitch/: sti_video.py
ws/gui-config/: persistent_settings  realsense.rviz
ws/object-tracking-pkg/: package.xml  setup.cfg  setup.py
ws/pointcloud-pkg/: CMakeLists.txt  package.xml
ws/pointcloud-pkg/src/: pcl_alignment_node.cpp  pcl_preprocess.cpp
ws/ultralytics-pkg/: gpu_check.py  package.xml  setup.py  yolov8.py
(+331 files in other folders)
